# mcs-project

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  SETUP.md  bench.csv  plots.ipynb  run.bat  run.sh
lib/override/: cholmod.h.in  t_cholmod_malloc.c  t_cholmod_realloc.c
matlab/: bench_glnxa64.csv  bench_win64.csv  getProfileResults.m  main.m  sparse_lib_versions.m
report/: citations.bib  frontPage.tex  import.typ  macros.tex  macros.typ  main.tex  main.typ  packages.tex  unimib-template.typ
report-typst/: citations.bib  import.typ  macros.typ  main.typ  packages.typ  sesso.typ  unimib-thesis.typ
report-typst/chapters/: 2.c++.typ  3.results.typ  abstract.typ  introduction.typ
report/chapters/: 1.matlab.typ  2.c++.typ  3.results.typ  4.conclusion.typ  abstract.typ  appendice.codici.typ  introduction.typ
report/chapters/3.results/: 3.results.c++.typ  3.results.compare.typ  3.results.matlab.typ
report/chapters/ch1/: chapter1.tex
report/chapters/ch2/: chapter2.tex
report/chapters/ch3/: chapter3.tex
report/chapters/introduction/: abstract.tex  introduction.tex
src/: main.cpp  profile.cpp  profile.hpp
